# cct-training

./: .gitignore  CCT_IMPLEMENTATION_GUIDE.md  CLAUDE.md  pyproject.toml
configs/: tier1_160m.yaml  tier1_160m_e2e.yaml  tier1_160m_seq_s200.yaml  tier1_160m_seq_s200_k4.yaml  tier1_160m_sequential.yaml  tier2_1b.yaml  tier2_410m.yaml  tier2_410m_fixed.yaml  tier2b_410m_wide.yaml  tier2c_410m_noise_mlp.yaml  tier3_410m_attn_bias.yaml  tier3_410m_diag_nobottleneck.yaml  tier3_410m_film.yaml  tier3_410m_frozen_adapter.yaml  tier3_410m_frozen_logit_bias.yaml  tier3_410m_hierarchical_S.yaml  tier3_410m_k4.yaml  tier3_410m_kvprefix_A.yaml  tier3_410m_kvprefix_B.yaml  tier3_410m_kvprefix_C.yaml  tier3_410m_kvprefix_D.yaml  tier3_410m_kvprefix_E.yaml  tier3_410m_logit_bias_F.yaml  tier3_410m_logit_bias_F_eval4k.yaml  tier3_410m_logit_bias_lora_G.yaml  tier3_410m_lora_live_s400.yaml  tier3_410m_pseudo_tokens_M.yaml  tier3_410m_pseudo_tokens_N.yaml  tier3_410m_pseudo_tokens_O.yaml  tier3_410m_recurrent_H.yaml  tier3_410m_recurrent_I.yaml  tier3_410m_recurrent_J.yaml  tier3_410m_recurrent_K.yaml  tier3_410m_recurrent_L.yaml  tier3_410m_retrieval_P.yaml  tier3_410m_seq_s200.yaml  tier3_410m_unfrozen_live_s400.yaml  tier3_7b.yaml  tier4_1b_llama.yaml  tier5_mistral_7b_pseudo_tokens.yaml  (+3 more)
scripts/: baseline_ppl.py  diagnostic_am_fitting.py  diagnostic_attention_weights.py  diagnostic_mask_only.py  eval_alpha_sweep.py  eval_hierarchical.py  eval_per_step.py  eval_perplexity.py  eval_quantization.py  eval_retrieval.py  eval_session_resumption.py  evaluate.py  sweep_memory_and_length.py  (+1 more)
(+35 files in other folders)
